Moved the nav out of the header and into the body to resolve the overlapping issue with fixed-top. Adjusted the columns the form in contact.html and adjusted margins and placement.

--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
 /* Prevents the fixed-top navbar from eating the body content */
 
 body { 
-    margin-top: 7rem;
     min-height: 400px;
     margin-bottom: 50px;
 }
@@ -10,3 +9,5 @@ body {
   .footer {
     background-color: #f5f5f5;
   }
+
+  
